2008-06-28  Zhang Junbo  <zhangjb@svn.gnome.org>

	Moved to the new format successfully.

	* operations/Makefile.am: added the path: frequency.
	* operations/frequency/dft.c: the first step to move to the new format.
	* operations/frequency/idft.c: the first step to move to the new format.

2008-06-27  Zhang Junbo  <zhangjb@svn.gnome.org>

	Restart from trunck. Added dft.c first.

	* AUTHORS:
	* configure.ac:
	* operations/frequency/Makefile.am:
	* operations/frequency/dft.c:
	* operations/frequency/tools/Makefile.am:
	* operations/frequency/tools/component.c:
	* operations/frequency/tools/fourier.c:

2008-06-23  Øyvind Kolås  <pippin@gimp.org>

	Documentation improvements (mostly orthographic) from Peter
	(gib_mir_mehl at gmx.net).

	* gegl/buffer/gegl-buffer.c:
	* gegl/buffer/gegl-buffer.h:
	* gegl/gegl-config.c:
	* gegl/graph/gegl-node.c:
	* gegl/operation/gegl-operation.h:
	* gegl/process/gegl-processor.c:
	* operations/affine/affine.c:
	* operations/affine/rotate.c:
	* operations/common/c2g.c:
	* operations/common/difference-of-gaussians.c:
	* operations/common/introspect.c:
	* operations/common/rectangle.c:
	* operations/common/stretch-contrast.c:
	* operations/external/display.c:
	* operations/external/save-pixbuf.c:
	* operations/workshop/snn-percentile.c:

2008-06-23  Øyvind Kolås  <pippin@gimp.org>

	* gegl/property-types/gegl-color.c: (gegl_color_get_string): applied
	change from Peter gib_mir_mehl at gmx.net.

2008-06-20  Øyvind Kolås  <pippin@gimp.org>

	* gegl/buffer/gegl-sampler-lanczos.c: (gegl_sampler_lanczos_get):
	added comment about section that can be moved from the sampler
	function to prepare to avoid per sampling overhead.

2008-06-20  Øyvind Kolås  <pippin@gimp.org>

	* gegl/buffer/gegl-sampler.[ch]: (gegl_sampler_get_ptr): added a
	function used to prime a linear buffer with all needed samples for
	interpolation.

	For all the interpolators, removed unneded alpha multiplications